Fix spacing and font sizing for responsiveness

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -30,7 +30,7 @@ header {
     grid-area: header;
     text-align: center;
     padding: 30px;
-    font-size: 2.5rem;
+    font-size: 2.25rem;
     letter-spacing: 2px;
 }
 
@@ -47,7 +47,7 @@ header {
 
 /*To hold all quiz elements and to create a grid display*/
 #quizContainer {
-    padding-top: 40px ;
+    padding-top: 30px ;
     display: grid;
     max-width: 100%;
     grid-template-columns: 1fr 3fr 1fr;
@@ -63,8 +63,8 @@ header {
 #quizCard {
     
     grid-area: quizCard;
-    min-height: 70%;
-    max-width: 90%;
+    /* min-height: 70%;
+    max-width: 90%; */
     background-color: #d1211e;
     color: #FFFDFE;
     text-align: center;
@@ -82,20 +82,18 @@ header {
 
 #question {
    
-    font-size: 1.5rem;
+    font-size: 1.25rem;
     text-decoration: solid;
 }
 
 #multiChoice {
- 
     text-align: left;
- 
     list-style-type: none;
 }
  
 
 li {
-    padding: 15px;
+    padding: 10px;
     margin: 5px;
 }
 
@@ -124,11 +122,11 @@ li {
     cursor: pointer;
     background-color: #0E2C42;
     color: #FFFDFE;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
     margin-top: 10px;
     margin: auto;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     text-transform: uppercase;
 
 }
@@ -145,11 +143,11 @@ li {
     color: #FFFDFE;
     border: #FFFDFE 2px;
     cursor: pointer;
-    padding: 20px;
+    padding: 10px;
     text-align: center;
     margin-top: 10px;
     margin: auto;
-    margin-bottom: 30px;
+    margin-bottom: 20px;
     text-transform: uppercase;  
 }
 
@@ -160,19 +158,19 @@ li {
 }
 
 p {
-    padding: 15px;
-    margin: 15px;
+    padding: 10px;
+    margin: 10px;
 }
 
 ul #questionCounter {
     text-align: center;
     padding: 20px;
-    margin: 15px;
+    margin-bottom: 15px;
     align-self: baseline;
     letter-spacing: 4px;
     font-weight: bold ;
 }
 
 h1 {
-    font-size: 30px;
+    font-size: 25px;
 }
